Makes sidebar sticky and change sidebar anchor icons

--- a/projects/templates/base.html
+++ b/projects/templates/base.html
@@ -11,6 +11,7 @@
   </head>
   <body class="container">
     <!-- SIDE BAR -->
+<div class='side_container'>
     <div class="side_nav">
       <div>
         <img
@@ -21,22 +22,22 @@
       </div>
       <div class="sidebar_buttons">
         <a href="{% url 'list_projects' %}">
-          <img class="home_icon" src="{% static 'media/image/home.svg' %}" />
+          <img class="home_icon" src="{% static 'media/image/home3.svg' %}" />
           <p>Home</p>
         </a>
         <a href="{% url 'show_my_tasks' %}">
-          <img class="home_icon" src="{% static 'media/image/task.svg' %}" />
+          <img class="home_icon" src="{% static 'media/image/task3.svg' %}" />
           <p>Tasks</p>
         </a>
         <a>
           <img
             class="home_icon"
-            src="{% static 'media/image/timeline.svg' %}"
+            src="{% static 'media/image/timeline3.svg' %}"
           />
           <p>Timeline</p>
         </a>
         <a>
-          <img class="home_icon" src="{% static 'media/image/plan.svg' %}" />
+          <img class="home_icon" src="{% static 'media/image/plan3.svg' %}" />
           <p>Plan</p>
         </a>
       </div>
@@ -63,6 +64,7 @@
       </div>
     </div>
   </div>
+</div>
 
     <!-- HEADER -->
     <div class="top_nav">
