--- a/projects/static/css/main.css
+++ b/projects/static/css/main.css
@@ -30,10 +30,14 @@ a:visited {
   color: black;
 }
 
+.side_container {
+  grid-area: 1/1/13/3;
+}
+
 /* Sidebar */
 .side_nav {
-  grid-area: 1/1/12/3;
-  /* background-color: #e8edef; */
+  position: sticky;
+  top: 0;
   background: #ffffff70;
   display: flex;
   flex-direction: column;
@@ -86,8 +90,8 @@ a:visited {
 }
 
 .user_image {
-  width: 30%;
-  height: 70%;
+  width: 20%;
+  margin-top: 5%;
 }
 
 .user_image img {
@@ -117,7 +121,7 @@ a:visited {
 }
 
 .sidebar_buttons a:hover img {
-  transform: translateX(110%) scale(1.1);
+  transform: translateX(130%) scale(1.1);
 }
 
 .sidebar_buttons a:hover p {
@@ -137,6 +141,7 @@ a:visited {
   margin: 0px;
   align-self: center;
   margin-left: 6px;
+  color: black;
 }
 
 /* Header Nav */
@@ -375,7 +380,7 @@ main {
 }
 
 .project_list th {
-  border-bottom: 1px solid #b0d39c;
+  border-bottom: 1px solid #90abda;
   margin-bottom: 1em;
   background-color: #e9e2e2;
 }
@@ -410,6 +415,23 @@ main {
   margin: 2px 0px;
 }
 
+/* FORMS */
+.create_form {
+  background-color: rgba(253, 251, 251, 0.861);
+  border-radius: 1em;
+  padding: 1.5em 1.5em;
+  width: 95%;
+  overflow: scroll;
+  border-radius: 1em;
+}
+
+.create_form form {
+  padding: 3em;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
 /* Footer */
 /* footer {
     background-color: black;
