--- a/projects/templates/projects/create_project.html
+++ b/projects/templates/projects/create_project.html
@@ -3,9 +3,17 @@
 {% block title %}
     <title>Create Project</title>
 {% endblock title %}
+
+{% block user_image%}
+<img src="{{ user_avatar.avatar }}" />
+{% endblock user_image%}
+{% block top_user_image %}
+<h4>{{user_avatar.user}}</h4>
+{% endblock top_user_image%}
+
 {% block content %}
     <main>
-        <div>
+        <div class='create_form'>
             <h1>Create a new project</h1>
             <form method = 'post'>
                 {% csrf_token %}
