--- a/projects/templates/projects/list.html
+++ b/projects/templates/projects/list.html
@@ -83,7 +83,7 @@
     </div>
     <div class="create_project">
       <div>
-        <a href="{% url 'create_project' %}">Create</a>
+        <a href="{% url 'create_project' %}">Add Project</a>
       </div>
       <div>
         <a href="{% url 'create_project' %}">Completed</a>
