stylize project detail page

--- a/projects/templates/projects/completed_projects.html
+++ b/projects/templates/projects/completed_projects.html
@@ -83,10 +83,7 @@
     </div>
     <div class="create_project">
       <div>
-        <a href="{% url 'create_project' %}">Add Project</a>
-      </div>
-      <div>
-        <a href="{% url 'list_projects' %}">Active</a>
+        <a href="{% url 'list_projects' %}">Active Projects</a>
       </div>
     </div>
   </div>
