--- a/projects/templates/projects/project_detail.html
+++ b/projects/templates/projects/project_detail.html
@@ -6,7 +6,7 @@
 
 {% block content %}
     <main>
-        <div>
+        <div class="project_list">
             <h1>{{ project.name }}</h1>
             <p>{{ project.description }}</p>
             <h2>Tasks</h2>
@@ -40,5 +40,10 @@
                 </table>
             {% endif %}
         </div>
+        <div class="create_project">
+            <div>
+              <a href="{% url 'create_task' %}">Add Task</a>
+            </div>
+          </div>
     </main>
 {% endblock content %}
