--- a/tasks/templates/tasks/list_tasks.html
+++ b/tasks/templates/tasks/list_tasks.html
@@ -39,7 +39,7 @@
 {% endblock middle %} {% block content %}
 <main>
   <div class="project_list">
-    <h1>My Tasks</h1>
+    <h1>Active Tasks</h1>
     {% if tasks|length == 0 %}
     <p>You have no tasks</p>
     {% else %}
