--- a/projects/templates/projects/create_project.html
+++ b/projects/templates/projects/create_project.html
@@ -21,5 +21,10 @@
                 <button type='submit'>Create</button>
             </form>
         </div>
+        <div class="create_project">
+            <div>
+              <a href="{% url 'list_projects' %}">My Projects</a>
+            </div>
+        </div>
     </main>
 {% endblock content %}
