--- a/projects/templates/projects/list.html
+++ b/projects/templates/projects/list.html
@@ -68,11 +68,9 @@
             <td>{{ project.deadline|date:"m/d/y" }}</td>
             <td>
               {% for tag in project.tags.all|slice:":2"%}
-              <button>
-                <a href=" {% url 'show_tagged_project' tag.id %} "
+                <a class="tag_color" href=" {% url 'show_tagged_project' tag.id %} "
                   >{{tag.name|truncatechars:5}}</a
                 >
-              </button>
               {% endfor %}
             </td>
           </tr>
@@ -96,11 +94,11 @@
     </div>
     <div class="tags">
       <p>Popular Tags</p>
+      <div>
       {% for tag in top_tags %}
-      <button>
-        <a href=" {% url 'show_tagged_project' tag.id %} ">{{tag.name}}</a>
-      </button>
+      <a class='tag_color' href=" {% url 'show_tagged_project' tag.id %} ">{{tag.name}}</a>
       {% endfor %}
+      </div>
     </div>
   </div>
 </main>
