Apply styles to search page

--- a/projects/static/css/main.css
+++ b/projects/static/css/main.css
@@ -403,7 +403,7 @@ main {
 
 .tags {
   margin: 1em 1em 1em 0em;
-  background-color: #b8cbec99;
+  background-color: #90abda99;
   border-radius: 8px;
   padding: 1em;
 }
@@ -445,8 +445,45 @@ td .tag_color {
   display: flex;
   flex-direction: column;
 }
-/* Footer */
-/* footer {
-    background-color: black;
-    grid-area: 12/1/13/13;
-  } */
+
+/* SEARCH PAGE */
+.search_div {
+  background-color: rgba(253, 251, 251, 0.861);
+  border-radius: 1em;
+  padding: 1.5em 1.5em;
+  width: 100%;
+  overflow: scroll;
+}
+
+.search_div div {
+  width: 100%;
+  display: flex;
+}
+
+.project_search {
+  /* width: 50%; */
+  display: flex;
+  flex-direction: column;
+  /* justify-content: flex-start; */
+}
+
+.project_search h2 {
+  margin: 1em 0em;
+}
+
+.project_search div {
+  background-color: #90abda;
+  border-radius: 1em;
+  padding: 1em;
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+}
+
+.project_search h3 {
+  margin-bottom: 0em;
+}
+
+.project_status {
+  margin-top: 0em;
+}
