--- a/projects/static/css/main.css
+++ b/projects/static/css/main.css
@@ -428,6 +428,30 @@ td .tag_color {
   padding: 0.2em;
 }
 
+/* Tags Page */
+.tags_div {
+    background-color: rgba(253, 251, 251, 0.861);
+    border-radius: 1em;
+    padding: 1.5em 1.5em;
+    width: 100%;
+    overflow: scroll;
+    display: flex;
+    gap: 2em;
+  }
+
+.tags_div div {
+  background-color: #90abda;
+  border-radius: 1em;
+  padding: 1em;
+  display: flex;
+  flex-direction: column;
+  width: 25%;
+}
+
+.tags_div h3 {
+  margin-bottom: 0em;
+}
+
 /* FORMS */
 .create_form {
   background-color: rgba(253, 251, 251, 0.861);
