Change styling of table

--- a/projects/templates/projects/completed_projects.html
+++ b/projects/templates/projects/completed_projects.html
@@ -68,11 +68,9 @@
             <td>{{ project.deadline|date:"m/d/y" }}</td>
             <td>
               {% for tag in project.tags.all|slice:":2"%}
-              <button>
-                <a href=" {% url 'show_tagged_project' tag.id %} "
+                <a class='tag_color' href=" {% url 'show_tagged_project' tag.id %} "
                   >{{tag.name|truncatechars:5}}</a
                 >
-              </button>
               {% endfor %}
             </td>
           </tr>
@@ -101,3 +99,6 @@
   </div>
 </main>
 {% endblock content %}
+
+
+
