--- a/projects/static/css/main.css
+++ b/projects/static/css/main.css
@@ -298,6 +298,7 @@ td.jsCalendar-current {
 #calendar table {
   width: 100%;
   height: 100%;
+  padding-bottom: 1em;
 }
 
 .jsCalendar-title-name {
@@ -358,6 +359,7 @@ main {
   border-radius: 1em;
   padding: 1.5em 1.5em;
   width: 95%;
+  height: 100%;
   overflow: scroll;
 }
 
@@ -368,8 +370,9 @@ main {
 
 .project_list table {
   width: 100%;
-  border-collapse: collapse;
+  border-collapse: separate;
   margin-top: 1em;
+  border-spacing: 0em 1em;
 }
 
 .project_list td,
@@ -377,12 +380,14 @@ main {
   padding: 1em 1em;
   text-align: start;
   font-size: 1.2em;
+  background-color: #ffffff;
 }
 
 .project_list th {
-  border-bottom: 1px solid #90abda;
+  border-bottom: 1px solid gray;
   margin-bottom: 1em;
   background-color: #e9e2e2;
+  padding: 1.5em;
 }
 
 .header_left {
