--- a/projects/templates/projects/project_detail.html
+++ b/projects/templates/projects/project_detail.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load static %}
 
 {% block title %}
     <title>{{ project.name }}</title>
@@ -7,7 +8,12 @@
 {% block content %}
     <main>
         <div class="project_list">
-            <h1>{{ project.name }}</h1>
+            <div class='project-title'>
+                <a class='project-edit-icon' href="{% url 'edit_project' project.id %}">
+                    <img class="edit-icon" src="{% static 'media/image/edit.svg' %}" />
+                </a>
+                <h1>{{ project.name }}</h1>
+            </div>
             <p>{{ project.description }}</p>
             <h2>Tasks</h2>
             <p>
@@ -19,6 +25,7 @@
                 <table>
                     <thead>
                         <tr>
+                            <th></th>
                             <th>Name</th>
                             <th>Assignee</th>
                             <th>Start date</th>
@@ -29,6 +36,11 @@
                     <tbody>
                         {% for task in project.tasks.all %}
                             <tr>
+                                <td class='edit-td'>
+                                    <a href="{% url 'edit_task' task.id %}">
+                                        <img class='edit-icon' src="{% static 'media/image/edit.svg' %}">
+                                    </a>
+                                </td>
                                 <td>{{ task.name }}</td>
                                 <td>{{ task.assignee }}</td>
                                 <td>{{ task.start_date }}</td>
