--- a/tasks/templates/tasks/list_tasks.html
+++ b/tasks/templates/tasks/list_tasks.html
@@ -46,6 +46,7 @@
     <table>
       <thead>
         <tr>
+          <th></th>
           <th>Name</th>
           <th>Project</th>
           <th>Start Date</th>
@@ -56,6 +57,11 @@
       <tbody>
         {% for task in tasks %}
         <tr>
+          <td class='edit-td'>
+            <a href="{% url 'edit_task' task.id %}">
+              <img class="edit-icon" src="{% static 'media/image/edit.svg' %}" />
+            </a>
+          </td>
           <td>{{ task.name }}</td>
           <td>{{ task.project.name }}</td>
           <td>{{ task.start_date|date:"m/d/y" }}</td>
