--- a/projects/templates/base.html
+++ b/projects/templates/base.html
@@ -74,7 +74,7 @@
           <input
             type="search"
             name="searched"
-            placeholder="Search Project / Task"
+            placeholder="Search Project / Task / Tags"
           />
           <button type="submit">
             <img class="search_icon" src="{% static 'media/image/magglass.svg' %}" />
