--- a/projects/templates/base.html
+++ b/projects/templates/base.html
@@ -22,8 +22,8 @@
       </div>
       <div class="sidebar_buttons">
         <a href="{% url 'list_projects' %}">
-          <img class="home_icon" src="{% static 'media/image/home3.svg' %}" />
-          <p>Home</p>
+          <img class="home_icon" src="{% static 'media/image/home4.svg' %}" />
+          <p>Dashboard</p>
         </a>
         <a href="{% url 'show_my_tasks' %}">
           <img class="home_icon" src="{% static 'media/image/task3.svg' %}" />
