--- a/projects/templates/projects/project_detail.html
+++ b/projects/templates/projects/project_detail.html
@@ -16,9 +16,6 @@
             </div>
             <p>{{ project.description }}</p>
             <h2>Tasks</h2>
-            <p>
-                <a href="{% url 'create_task' %}">Create a new task</a>
-            </p>
             {% if project.tasks.all|length == 0 %}
                 <p>This project has no tasks</p>
             {% else %}
@@ -31,6 +28,7 @@
                             <th>Start date</th>
                             <th>Due date</th>
                             <th>Is completed</th>
+                            <th></th>
                         </tr>
                     </thead>
                     <tbody>
@@ -46,6 +44,11 @@
                                 <td>{{ task.start_date }}</td>
                                 <td>{{ task.due_date }}</td>
                                 <td>{{ task.is_completed|yesno }}</td>
+                                <td class='edit-td'>
+                                    <a href="{% url 'delete_task' task.id %}">
+                                        <img class="edit-icon" src="{% static 'media/image/trash2.svg' %}" />
+                                    </a>
+                                </td>
                             </tr>
                         {% endfor %}
                     </tbody>
