--- a/projects/static/css/main.css
+++ b/projects/static/css/main.css
@@ -1,4 +1,5 @@
-@import url("https://fonts.googleapis.com/css2?family=Signika:wght@300;400&family=Urbanist:wght@200;400&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Julius+Sans+One&family=Livvic:wght@300;400&family=Overlock+SC&family=Urbanist:wght@200;400&display=swap");
+
 .container {
   margin: 0px;
   display: grid;
@@ -11,7 +12,8 @@
     rgba(179, 236, 243, 0.5) 15%,
     rgba(203, 203, 239, 0.9) 68%
   );
-  font-family: "Urbanist", sans-serif;
+  font-family: "Livvic", sans-serif;
+  font-weight: 300;
 }
 
 /* APPLY to ALL */
@@ -60,6 +62,7 @@ a:visited {
 .side_nav > div > h1 {
   margin: 0em auto;
   font-size: 2em;
+  font-family: "Overlock SC", cursive;
 }
 
 .side_image {
@@ -83,8 +86,7 @@ a:visited {
 .side_links {
   margin: 0em;
   padding: 0em;
-  padding-top: 2em;
-  font-size: 1em;
+  font-size: 0.8em;
   width: 100%;
   display: flex;
   justify-content: flex-end;
@@ -92,16 +94,23 @@ a:visited {
 }
 
 .user_image {
-  width: 20%;
   margin-top: 5%;
+  display: flex;
+  gap: 1em;
+  align-items: flex-end;
 }
 
 .user_image img {
-  width: 100%;
-  height: 100%;
+  width: 3.5em;
+  height: 3.5em;
   object-fit: cover;
-  border-radius: 100%;
+  border-radius: 50%;
   filter: saturate(85%);
+}
+
+.user_image p {
+  margin: 0em;
+  font-size: 1em;
 }
 
 .sidebar_buttons {
@@ -145,7 +154,7 @@ a:visited {
   align-self: center;
   margin-left: 6px;
   color: black;
-  font-weight: 800;
+  font-weight: 400;
 }
 
 /* Header Nav */
@@ -216,6 +225,7 @@ a:visited {
 
 .countdown p {
   margin: 0em;
+  font-weight: 400;
 }
 
 .countdown > div {
@@ -271,6 +281,7 @@ div .middle_countdown {
   margin-top: -15%;
   padding: 0em;
   font-size: 3em;
+  font-weight: 500;
 }
 
 .countdown1 p {
@@ -322,10 +333,10 @@ td.jsCalendar-current {
   margin-bottom: 0.5em;
   border-radius: 16px;
   background-color: #e9e2e2;
+  font-family: "Overlock SC", cursive;
 }
 
 .jsCalendar-week-days {
-  font-weight: 800;
   font-size: 1.2em;
 }
 
@@ -389,6 +400,7 @@ main {
 .project_list h1 {
   margin-bottom: 1em;
   font-size: 1.5em;
+  font-family: "Overlock SC", cursive;
 }
 
 .project_list table {
@@ -437,6 +449,7 @@ main {
 }
 .tags p {
   font-size: 1.2em;
+  font-family: "Overlock SC", cursive;
 }
 
 .white {
@@ -450,7 +463,7 @@ main {
   margin: 0.2em;
   border-radius: 8px;
   box-shadow: 2px 3px 5px 0px rgba(0, 0, 0, 0.2);
-  font-size: .9em;
+  font-size: 0.9em;
 }
 
 td .tag_color {
