--- a/projects/templates/base.html
+++ b/projects/templates/base.html
@@ -18,7 +18,7 @@
           class="top_image"
           src="{% static 'media/image/sharedgoals2.svg' %}"
         />
-        <h1>Projects Manager</h1>
+        <h1>TaskMaster</h1>
       </div>
       <div class="sidebar_buttons">
         <a href="{% url 'list_projects' %}">
