--- a/projects/static/css/main.css
+++ b/projects/static/css/main.css
@@ -30,6 +30,10 @@ a {
   color: black;
 }
 
+a:hover {
+  filter: brightness(90%);
+}
+
 a:visited {
   color: black;
 }
@@ -162,7 +166,7 @@ a:visited {
   grid-area: 1/3/2/13;
   display: flex;
   justify-content: space-between;
-  padding: 1em 1em 1em 1em;
+  padding: 1em 1em 1.5em 1em;
   align-items: center;
 }
 
@@ -234,7 +238,7 @@ a:visited {
   text-align: center;
   background-color: #ffffff;
   padding: 0em 1em;
-  box-shadow: 0px -7px 0px 0px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px -4px 0px 0px rgba(0, 0, 0, 0.2);
 }
 
 .countdown img {
